--- a/labo_5/opdracht_6/styles/stijl.css
+++ b/labo_5/opdracht_6/styles/stijl.css
@@ -1,3 +1,32 @@
 h1, h2, h3 {
     font-family: Arial, serif;
 }
+
+h1 {
+    font-size: 1.8em
+}
+
+h2 {
+    font-size: 1.5em
+}
+
+h3 {
+    font-size: 1.4em
+}
+
+a {
+    font-family: "Times New Roman", serif;
+    font-size: 1.2em;
+}
+
+a.a {
+    color:red;
+}
+
+a.b {
+    color:green;
+}
+
+a.c {
+    color:blue;
+}
